# das

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitmodules  BUGFIXES  CHANGELOG  Makefile  NOTICE  README.md  REMOTEDB_3_PEERS_TOY.md  _PRESET_LINKS_e2b95a97ef9c36e5d20ec501c8b4af18.txt  atomdb_benchmark.db  compose.yaml  das-he-animals.ipynb  das-he-sentences-evolution.ipynb  das-he-setup.ipynb  index.html  myconfig  restart.sh  setup.sh  stop.sh  word_qe.sh
3rd_party_slots/python_client/: .black.cfg  .coveragerc  .flake8.cfg  .isort.cfg  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
3rd_party_slots/rust_metta_bus_client/: Cargo.toml  README.md  build.rs
python/: Makefile  README.md  pyproject.toml
python/commons/: README.md  das_logging.py  test_das_logging.py
python/hyperon_das_commons/: README.md
python/test_commons/: test_das_logging.py
src/: .bazeliskrc  .bazelrc  .clang-tidy  .gitignore  .ruff.toml  BUILD  MODULE.bazel  WORKSPACE  ab.sh  bazel-bin  bazel-das-attention-broker  bazel-out  bazel-testlogs
src/agents/: BUILD  BaseProxy.cc  BaseProxy.h  BaseQueryProxy.cc  BaseQueryProxy.h
src/assets/: 3rd-party.tgz  ensemble.yaml  hiredis-cluster.tgz
src/atom_space/: AtomSpace.cc  AtomSpace.h  AtomSpaceTypes.h  BUILD  Context.cc  Context.h  LinkTemplateInterface.h
src/atomdb/: AtomDB.h  AtomDBAPITypes.cc  AtomDBAPITypes.h  AtomDBCache.cc  AtomDBCache.h  AtomDBCacheSingleton.cc  AtomDBCacheSingleton.h  AtomDBSingleton.cc  AtomDBSingleton.h  AtomDBUtils.cc  AtomDBUtils.h  BUILD  MorkDBAPITypes.cc  MorkDBAPITypes.h  MorkMongoDB.cc  MorkMongoDB.h  RedisContext.cc  RedisContext.h  RedisContextPool.cc  RedisMongoDB.cc  RedisMongoDB.h  RedisMongoDBAPITypes.cc  RedisMongoDBAPITypes.h
src/attention_broker/: AttentionBrokerClient.cc  AttentionBrokerClient.h  AttentionBrokerServer.cc  AttentionBrokerServer.h  BUILD  HandleTrie.cc  HandleTrie.h  HebbianNetwork.cc  HebbianNetwork.h  HebbianNetworkUpdater.cc  HebbianNetworkUpdater.h  README.md  RequestSelector.cc  RequestSelector.h  StimulusSpreader.cc  StimulusSpreader.h  WorkerThreads.cc  WorkerThreads.h
src/commons/: Assignment.cc  Assignment.h  Atom.cc  Atom.h  BUILD  Config.cc  Config.h  ConfigFileSingleton.cc  ConfigFileSingleton.h  EnvironmentRestoreGuard.cc  EnvironmentRestoreGuard.h  HandleDecoder.h  HandleTrie.cc  HandleTrie.h  JsonConfig.cc  JsonConfig.h  JsonConfigParser.cc  JsonConfigParser.h  Logger.h  MemoryPool.h  MettaMapping.cc  MettaMapping.h  MongoInitializer.h  Profiler.h  Properties.h  RequestValidator.h  Serializable.h  SharedQueue.cc  SharedQueue.h  Stoppable.cc  Stoppable.h  StoppableThread.cc  StoppableThread.h  SystemParameters.cc  SystemParameters.h  SystemParametersSingleton.cc  SystemParametersSingleton.h  SystemParametersValidation.cc  SystemParametersValidation.h  ThreadPool.h  (+6 more)
src/cpp/: BUILD  MODULE.bazel  WORKSPACE
src/das_agent/: BUILD  README.md  das_agent_node.py  main.py  requirements.txt
src/db_adapter/: AtomPersister.cc  AtomPersister.h  AtomProcessor.cc  AtomProcessor.h  BUILD  BoundedSharedQueue.cc  BoundedSharedQueue.h  ContextLoader.cc  ContextLoader.h  DBWrapper.cc  DBWrapper.h  DataMapper.cc  DataMapper.h  DataTypes.cc  DataTypes.h  DatabaseAdapter.cc  DatabaseAdapter.h  DatabaseAdapterRunner.cc  DatabaseAdapterRunner.h  DatabaseConnection.cc  DatabaseConnection.h  DatabaseLoader.cc  DatabaseLoader.h  DatabaseMapper.cc  DatabaseMapper.h  DatabaseMappingStrategy.cc  DatabaseMappingStrategy.h  DatabaseOrchestrator.cc  DatabaseOrchestrator.h  DatabaseTypes.h  DatabaseWrapper.cc  DatabaseWrapper.h  MapperFactory.cc  MapperFactory.h  MettaFileWriter.cc  MettaFileWriter.h  Orchestrator.cc  Orchestrator.h  Pipeline.cc  Pipeline.h  (+1 more)
src/distributed_algorithm_node/: BUILD  BusNode.cc  BusNode.h  DistributedAlgorithmNode.cc  DistributedAlgorithmNode.h  LeadershipBroker.cc  LeadershipBroker.h  Message.cc  Message.h  MessageBroker.cc  MessageBroker.h  StarNode.cc  StarNode.h
src/docker/: Dockerfile  Dockerfile.query_broker_mork  Dockerfile.spawner
src/evolution/: BUILD  Dockerfile  README.md  attention_broker_updater.py  build.sh  config.example.cfg  distributed_node.py  fitness_functions.py  main.py  node.py  optimizer.py  selection_methods.py  utils.py
src/hasher/: BUILD  Hasher.h  expression_hasher.cc  expression_hasher.h
src/hyperon_das/: BUILD  README.md  __init__.py  client.py  das.py  decorators.py  link_filters.py  logger.py  traverse_engines.py  utils.py
src/hyperon_das_atomdb/: BUILD  README.md  __init__.py
src/hyperon_das_atomdb_cpp/: BUILD  atom_db_publicist.h  atom_db_trampoline.h  bind_helpers.h  hyperon_das_atomdb_cpp_bind.cc
src/hyperon_das_atomdb_cpp_lib/: BUILD  constants.cc  constants.h  database.cc  database.h  document_types.h  exceptions.h  expression_hasher.cc  expression_hasher.h  patterns.h  ram_only.cc  ram_only.h  redis_mongo.cc  redis_mongo.h  type_aliases.h
src/hyperon_das_node/: BUILD  README_hyperon_das_node.md  hyperon_das_node_ext.cc
src/hyperon_das_query_engine/: BUILD  __init__.py  hyperon_das_query_engine_ext.cc
src/inference_agent/: BUILD  README.md  distributed_inference_control_agent_node.cc  distributed_inference_control_agent_node.h  inference_agent.cc  inference_agent.h  inference_agent_node.cc  inference_agent_node.h  inference_iterator.cc  inference_iterator.h  inference_node.h  inference_request.cc  inference_request.h  inference_request_validator.h
src/link_creation_agent/: BUILD  README.md  agent.cc  agent.h  compose.yaml  das_agent_node.cc  das_agent_node.h  das_link_creation_node.cc  das_link_creation_node.h  das_server_node.cc  das_server_node.h  dummy_message.h  equivalence_processor.cc  equivalence_processor.h  implication_processor.cc  implication_processor.h  link.cc  link.h  link_create_template.cc  link_create_template.h  link_creation_agent.cc  link_creation_agent.h  link_creation_agent_node.cc  link_creation_agent_node.h  link_creation_console.cc  link_creation_console.h  link_creation_db_helper.h  link_creation_processors.h  link_creation_service.cc  link_processor.h  (+8 more)
(+1095 files in other folders)
