[tool.poetry]
name = "das-commons"
version = "0.0.1"
description = ""
authors = ["Pedro Costa <pedrobc89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.2.6"
mypy = "^1.10.1"
isort = "^5.12.0"
black = "^23.7.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8-pyproject = "^1.2.3"

[tool.isort]
py_version = 38
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100


[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true


[tool.flake8]
show-source = true
extend-ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
