"""
This Bazel module configuration file sets up dependencies for the DAS project.

It includes project's direct dependencies such as `mbedtls`, `rules_cc`,
`grpc`, and `googletest`, but also lists some dependencies of the dependencies,
like `rules_go`, `googleapis`, and `protoc-gen-validate`, among others. This is
required basically to set alternative names (`repo_name`) used internally by
some packages, such as `grpc`, which is in a transitory state (from WORKSPACE
to MODULE.bazel support) and needs this temporary workaround. Hopefully, this
will be fixed by the end of 2025 and it'll be possible to list only the direct
dependencies. TODO: https://github.com/singnet/das/issues/180

Additionally, this file configures:
- an `http_archive` to get `das-proto` repo content.
"""

module(name = "das")

# Rules foreign CC being asked after bazel 9.0.0

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.8.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Dependencies for Word Query
bazel_dep(name = "rules_nodejs", version = "6.7.3")

# Python dependency
bazel_dep(name = "rules_python", version = "1.8.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")  # Use extensions:python.bzl
python.toolchain(
    is_default = True,
    # No singular aqui
    python_version = "3.10",
)

# Bazel to run linters and formatters
bazel_dep(name = "aspect_rules_lint", version = "2.0.0-rc1")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "16.0.0",
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

# C++

# Work around https://github.com/bazelbuild/bazel/issues/24426.  See
# https://github.com/bazelbuild/bazel-central-registry/pull/3320#issuecomment-2546030208.
# FIXME: Remove once fixed upstream in googletest and abseil-cpp.
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")
bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "rules_apple", version = "3.17.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "protoc-gen-validate", version = "1.0.4.bcr.2", repo_name = "com_envoyproxy_protoc_gen_validate")
bazel_dep(name = "apple_support", version = "1.23.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_go", version = "0.52.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a", repo_name = "com_google_googleapis")
bazel_dep(name = "gazelle", version = "0.41.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_github_google_googletest")
bazel_dep(name = "mbedtls", version = "3.6.0.bcr.1")

# nanobind
bazel_dep(name = "nanobind_bazel", version = "2.4.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_singnet_das_proto",
    strip_prefix = "das-proto-0.1.20",
    urls = ["https://github.com/singnet/das-proto/archive/refs/tags/0.1.20.tar.gz"],
)

# Deps for formatting and linting BUILD files
bazel_dep(name = "cgrindel_bazel_starlib", version = "0.27.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")

bzlformat_pkg = use_extension(
    "@cgrindel_bazel_starlib//bzlformat:extensions.bzl",
    "bzlformat_pkg",
)
use_repo(bzlformat_pkg, "bzlformat")

# Dependency for RPM and DEB packaging
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_pkg", version = "1.2.0")

find_rpm = use_extension(
    "@rules_pkg//toolchains/rpm:rpmbuild_configure.bzl",
    "find_system_rpmbuild_bzlmod",
)
use_repo(find_rpm, "rules_pkg_rpmbuild")

register_toolchains("@rules_pkg_rpmbuild//:all")
