[package]
name = "metta-bus-client"
version = "0.3.2"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
prost = "0.13.5"
regex = "1.11.0"
log = "0.4.0"
env_logger = "0.8.4"

hyperon-common = { git = "https://github.com/trueagi-io/hyperon-experimental.git", version = "0.2.8" }
hyperon-atom = { git = "https://github.com/trueagi-io/hyperon-experimental.git", version = "0.2.8" }
hyperon-space = { git = "https://github.com/trueagi-io/hyperon-experimental.git", version = "0.2.8" }

[build-dependencies]
tonic-build = "0.12.3"
