[package]
name = "metta-bus-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
prost = "0.13.5"
regex = "1.11.0"
log = "0.4.0"
env_logger = "0.8.4"

hyperon-atom = { git = "https://github.com/trueagi-io/hyperon-experimental.git" }

mongodb = "3.2.3"
bson = "2.14.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
